--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Odin Recipes.</h1>
-
+        <a href="recipes/pizza.html" target="_blank" rel="noreferrer">Homemade Pizza Recipe</a>
 
     </body>
 </html>
