--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     </head>
 
     <body>
-        <h1>Odin Recipes.</h1>
-        <a href="recipes/pizza.html" target="_blank" rel="noreferrer">Homemade Pizza Recipe</a>
-
+        <h1>My Favorite Recipes.</h1>
+        <ul>
+            <li><a href="recipes/pizza.html" target="_blank" rel="noreferrer">Homemade Pizza Recipe</a></li>
+            <li><a href="recipes/butter-chicken.html" target="_blank" rel="noreferrer">Butter Chicken</a></li>
+            <li><a href="recipes/salmon.html" taget="_blank" rel="noreferrer">Salmon</a></li>
+        </ul>
     </body>
 </html>
