--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,5 +6,34 @@
 </head>
 <body>
     <h1>Homemade Pizza</h1>
+    <img src="https://www.allrecipes.com/thmb/3_Nso2rsNTzD9M4wxv8xGfE608M=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Quick-and-Easy-Pizza-Crust2-2000-d38b79fa6b8e4a23ab9dac62dd7afff8.jpg" alt="Delicious hearty Pizza topped with Pepperoni and Green Onions" height="310" width="350">
+   
+    <h2>The Recipe</h2>
+        <p>
+            If you're looking for a homemade pizza crust recipe that's great for beginners, you're in luck. This top-rated recipe is super easy to throw together on a whim – and it puts the store-bought stuff to shame. Learn how to make the best pizza crust of your life with just a few ingredients, find out how to shape the dough, and get our best storage secrets.</p>
+        <p>You can use all-purpose flour, but bread flour makes a superior crust. If you have a pizza stone, dust it with cornmeal and use it instead of a greased pizza pan.</p>
+   
+    <h3>What You Will Need:</h3>
+        <ul>
+            <li>1 cup warm water (110 degrees F/45 degrees C)</li>
+            <li>1 (.25 ounce) package active dry yeast</li>
+            <li>1 teaspoon white sugar</li>
+            <li>2 ½ cups bread flour</li>
+            <li>2 tablespoons olive oil</li>
+            <li>1 teaspoon salt</li>
+        </ul>
+   
+    <h3>The Directions:</h3>
+        <ol>
+             <li>Gather all ingredients. Preheat oven to 450 degrees F (230 degrees C), and lightly grease a pizza pan</li>
+             <li>Place warm water in a bowl; add yeast and sugar. Mix and let stand until creamy, about 10 minutes. </li>
+             <li>Add flour, oil, and salt to the yeast mixture; beat until smooth. You can do this by hand or use a stand mixer fitted with a dough hook to make it easier.</li>
+            <li>Let rest for 5 minutes.</li>
+            <li>Turn dough out onto a lightly floured surface and pat or roll into a 12-inch circle.</li>
+            <li>Transfer to the prepared pizza pan.</li>
+            <li>Spread crust with sauce and toppings of your choice.</li>
+            <li>Bake in the preheated oven until golden brown, 15 to 20 minutes. Remove from the oven and let cool for 5 minutes before serving.</li>
+      </ol>
+
 </body>
 </html>
