--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Salmon</h1>
-        <img src="../images/salmon.webp" height="400" width="400">
+        <img src="../images/Salmon.webp" height="400" width="400">
 
     <h2>The Recipe</h2>
         <p>The salmon is <em>moist, smoky, and by far the best I've ever eaten.</em> I like to serve it with Asian-style rice and asparagus.</p>
