--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
-
+        <link rel="stylesheet" href="styles.css">
     </head>
 
-    <body>
+    <body class="background">
         <h1>My Favorite Recipes.</h1>
         <ul>
-            <li><a href="recipes/pizza.html" target="_blank" rel="noreferrer">Homemade Pizza</a></li>
-            <li><a href="recipes/butter-chicken.html" target="_blank" rel="noreferrer">Butter Chicken</a></li>
-            <li><a href="recipes/salmon.html" taget="_blank" rel="noreferrer">Salmon</a></li>
+            <li>           <a href="recipes/pizza.html" target="_blank" rel="noreferrer">Homemade Pizza</a></li>
+            <li id="white"><a href="recipes/butter-chicken.html" target="_blank" rel="noreferrer" style="color:black">Butter Chicken</a></li>
+            <li>           <a href="recipes/salmon.html" taget="_blank" rel="noreferrer">Salmon</a></li>
         </ul>
+        <button>Click Here</button>
     </body>
 </html>
